--- a/Propuesta/propuesta.tex
+++ b/Propuesta/propuesta.tex
@@ -2,15 +2,102 @@
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
 
-\title{\textbf{Propuesta de tesina}}
+\usepackage{fancyhdr}
+\usepackage{fancyvrb}
+\usepackage{graphicx}
+
+
+\lhead{Valentina Bini}
+\chead{}
+\rhead{Legajo: B-5926/9}
+
+\lfoot{}
+\cfoot{\thepage}
+\rfoot{}
+
+\pagestyle{fancy}
+
+
 \date{}
 
 \begin{document}
 
-\maketitle
+
+\begin{titlepage}  %Título
+
+	\centering % Centrar
+	\scshape % Font linda para las cosas chicas
+	
+	\textit{Facultad de Ciencias Exactas, Ingeniería y Agrimensura - UNR\\Departamento de Ciencias de la Computación }
+	
+	\vspace{\baselineskip}
+	
+	%------------------------------------------------
+	%	Título
+	%------------------------------------------------
+	
+	\rule{\textwidth}{1.6pt}\vspace*{-\baselineskip}\vspace*{2pt} % Línea horizontal grande
+	\rule{\textwidth}{0.4pt} % Línea horizontal suave
+	
+	\vspace{0.75\baselineskip} % Espacio pre-título
+	
+	{\huge Propuesta de Tesina\\} % Título
+	
+	\vspace{0.75\baselineskip} % Espacio post-título
+	
+	\rule{\textwidth}{0.4pt}\vspace*{-\baselineskip}\vspace{3.2pt} % Línea delgada
+	\rule{\textwidth}{1.6pt} % Línea grande
+	
+	\vspace{\baselineskip} % Espacio post título
+	
+	%------------------------------------------------
+	%	Realizadores
+	%------------------------------------------------
+	
+	\Large{\textbf{Postulante:}}
+	
+	\vspace{\baselineskip} % Espacio
+	
+    {\itshape\LARGE Bini, Valentina María}
+	
+	\vspace{0.5\baselineskip} % Espacio	
+	
+	\large{Legajo: B-5926/9}
+	
+	\vspace{2\baselineskip} % Espacio
+
+        \Large{\textbf{Director:}}
+	
+	\vspace{\baselineskip} % Espacio
+	
+    {\itshape\LARGE Rivas, Exequiel}
+	
+	\vspace{0.5\baselineskip} % Espacio	
+ 
+	\vspace*{6\baselineskip} %Espacio pre imagen
+    
+    %Imagen
+    \begin{figure}[h] %El h es para que quede en el lugar
+	\centering
+	\includegraphics[width=0.4\linewidth]{Logo-Unr-1.png} \hfill \includegraphics[width=0.4\linewidth]{FCEIA.jpeg}
+	\end{figure}
+    
+    \vfill % Espacio
+	
+	%------------------------------------------------
+	%	Publicador o fecha
+	%------------------------------------------------
+		
+	\vspace{0.3\baselineskip} % Espacio
+	
+	13-12-2022 % Fecha
+	
+
+\end{titlepage}
 
 
-\section{Situación del postulante}
+
+\section{Situación de la postulante}
 
 Al día 10/12/2022 tengo aprobadas 33 materias de la carrera y sólo
 tengo pendiente realizar la tesina para finalizar la carrera de
