propuesta: título agregado

--- a/Propuesta/propuesta.tex
+++ b/Propuesta/propuesta.tex
@@ -107,7 +107,7 @@ Agrimensura (UNR) 20 horas semanales (2 cargos simples).
 
 \section{Título}
 
-??
+Formalización de mónadas concurrentes en Agda: el caso de la mónada Delay
 
 \section{Motivación y objetivo general}
 
