propuesta: tiempo esperado por item

--- a/Propuesta/propuesta.tex
+++ b/Propuesta/propuesta.tex
@@ -193,17 +193,17 @@ mónada Delay.
 
 \begin{enumerate}
 
-\item Estudio de la estructura de mónada concurrente.
+\item Estudio de la estructura de mónada concurrente (1 mes).
 
-\item Introducción de la clase de mónada concurrente en Agda.
+\item Introducción de la clase de mónada concurrente en Agda (1 mes).
 
-\item Estudio de la mónada Delay y su implementación en Agda.
+\item Estudio de la mónada Delay y su implementación en Agda (2 meses).
 
 \item Adaptación de las operaciones de la mónada Delay en el contexto de
-2, y las pruebas de estructura de mónada y functor monoidal.
+2, y las pruebas de estructura de mónada y functor monoidal (1 mes).
 
 \item Prueba del axioma de intercambio de mónada concurrente en Agda
-para la mónada Delay.
+para la mónada Delay (2 meses).
 
 \end{enumerate}
 
