--- a/doc/latex/Agda.tex
+++ b/doc/latex/Agda.tex
@@ -665,10 +665,12 @@
 %<*hidingrenaming>
 \begin{code}%
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
-\AgdaModule{Numbers}\AgdaSpace{}%
-\AgdaKeyword{hiding}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{suc₂}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaKeyword{renaming}\AgdaSpace{}%
+\AgdaModule{Numbers}%
+\>[384I]\AgdaKeyword{hiding}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{suc₂}\AgdaSymbol{)}\<%
+\\
+\>[.][@{}l@{}]\<[384I]%
+\>[13]\AgdaKeyword{renaming}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaDatatype{Nat}\AgdaSpace{}%
 \AgdaSymbol{to}\AgdaSpace{}%
 \AgdaDatatype{natural}\AgdaSymbol{;}\AgdaSpace{}%
@@ -864,11 +866,11 @@
 \\
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaKeyword{field}%
-\>[496I]\AgdaField{x}\AgdaSpace{}%
+\>[495I]\AgdaField{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{ℕ}\<%
 \\
-\>[.][@{}l@{}]\<[496I]%
+\>[.][@{}l@{}]\<[495I]%
 \>[10]\AgdaField{y}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{ℕ}\<%
@@ -914,11 +916,11 @@
 \\
 %
 \>[4]\AgdaKeyword{field}%
-\>[523I]\AgdaField{x}\AgdaSpace{}%
+\>[522I]\AgdaField{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{ℕ}\<%
 \\
-\>[.][@{}l@{}]\<[523I]%
+\>[.][@{}l@{}]\<[522I]%
 \>[10]\AgdaField{y}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{ℕ}\<%
@@ -1073,13 +1075,13 @@
 \AgdaOperator{\AgdaInductiveConstructor{∷}}\AgdaSpace{}%
 \AgdaBound{xs}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[620I]\AgdaBound{f}\AgdaSpace{}%
+\>[619I]\AgdaBound{f}\AgdaSpace{}%
 \AgdaBound{x}%
 \>[32]\AgdaOperator{\AgdaField{>>=}}\AgdaSpace{}%
 \AgdaSymbol{\textbackslash{}}\AgdaBound{y}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[620I]%
+\>[.][@{}l@{}]\<[619I]%
 \>[22]\AgdaFunction{mapM}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSpace{}%
 \AgdaBound{xs}\AgdaSpace{}%
@@ -1096,8 +1098,8 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{mapM'}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{M}\AgdaSpace{}%
+\AgdaSymbol{:}%
+\>[632I]\AgdaSymbol{\{}\AgdaBound{M}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -1109,8 +1111,10 @@
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\<%
+\\
+\>[.][@{}l@{}]\<[632I]%
+\>[8]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
