--- a/doc/tex/agda.tex
+++ b/doc/tex/agda.tex
@@ -1,6 +1,6 @@
 \chapter{Introducci\'on a Agda} \label{chapter:agda}
 
-Agda es un lenguaje de programación funcional desarrollado por la Universidad de Chalmers que se caracteriza por tener tipos dependientes. A diferencia de otros lenguajes donde hay una separación clara entre el mundo de los tipos y el de los valores, en un lenguaje con tipos dependientes estos universos están más entremezclados. Los tipos pueden contener valores arbitrarios (lo que los hace \textit{depender} de ellos) y pueden aparecer también como argumentos o resultados de funciones.
+Agda es un lenguaje de programación funcional desarrollado inicialmente por Ulf Norell en la Universidad de Chalmers como parte de su tesis doctoral \cite{norell:thesis} que se caracteriza por tener tipos dependientes. A diferencia de otros lenguajes donde hay una separación clara entre el mundo de los tipos y el de los valores, en un lenguaje con tipos dependientes estos universos están más entremezclados. Los tipos pueden contener valores arbitrarios (lo que los hace \textit{depender} de ellos) y pueden aparecer también como argumentos o resultados de funciones.
 
 El hecho de que los tipos puedan contener valores, permite que se puedan escribir propiedades de ciertos valores como tipos. Los elementos de estos tipos son pruebas de que la propiedad que representan es verdadera. Esto hace que los lenguajes con tipos dependientes puedan ser utilizados como una lógica. Esta fue la idea principal de la teoría de tipos desarrollada por Martin Löf, en la cual está basado el desarrollo de Agda. Una característica importante de esta teoría es su enfoque constructivista, en el cual para demostrar la existencia de un objeto debemos construirlo.
 
@@ -8,9 +8,9 @@ Para poder utilizar a Agda como una lógica se necesita que sea consistente, y e
 
 El objetivo de esta sección es presentar una introducción a Agda, haciendo énfasis en las características necesarias para exponer la temática de esta tesina. 
 
-\section{Tipos de datos y \textit{Pattern Matching}}
+\section{Tipos de datos y \textit{Pattern Matching}}\label{agda:tipos}
 
-Un concepto clave en Agda es el \textit{pattern matching} sobre tipos de datos algebraicos. Al agregar los tipos dependientes el \textit{pattern matching} se hace aún más poderoso. Se verá este tema más en detalle en la sección \ref{dependent}. Para comenzar, en esta sección se describirán las funciones y tipos de datos con tipos simples. 
+Un concepto clave en Agda es el \textit{pattern matching} sobre tipos de datos algebraicos. Al agregar los tipos dependientes el \textit{pattern matching} se hace aún más poderoso. Se verá este tema más en detalle en la sección \ref{agda:dependent}. Para comenzar, en esta sección se describirán las funciones y tipos de datos con tipos simples. 
 
 Los tipos de datos se definen utilizando una declaración \AgdaKeyword{data}, en la que se especifica el nombre y el tipo del tipo de dato a definir, así como los constructores y sus respectivos tipos. En el siguiente código se puede ver una forma de definir el tipo de los booleanos:
 
@@ -40,7 +40,7 @@ La precedencia y asociatividad de un operador se define utilizando una declaraci
 
 La palabra clave \AgdaKeyword{infixl} indica que se asocia a izquierda (de igual manera existe \AgdaKeyword{infixr} para asociar a derecha o \AgdaKeyword{infix} si no se asocia hacia ningún lado) y el número que sigue indica la precedencia, operadores con mayor número tendrán más precedencia que operadores con menor número.
 
-\subsection{Tipos de datos parametrizados}\label{parametrized}
+\subsection{Tipos de datos parametrizados}\label{tipos:parametrized}
 
 Los tipos de datos pueden estar parametrizados por otros tipos de datos. El tipo de las listas de elementos de tipo arbitrario se define de la siguiente manera:
 
@@ -49,10 +49,9 @@ Los tipos de datos pueden estar parametrizados por otros tipos de datos. El tipo
 En este ejemplo el tipo \AgdaDatatype{List} está parametrizado por el tipo \AgdaArgument{A}, el cual define el tipo de dato que tendrán los elementos de las listas. \AgdaDatatype{List} \AgdaArgument{$\mathbb{N}$} es el tipo de las listas de números naturales. 
 
 
-\subsection{Patrones con puntos}
+\subsection{Patrones con puntos}\label{tipos:puntos}
 
 En algunos casos, al definir una función por \textit{pattern matching}, ciertos patrones de un argumento fuerzan que otro argumento tenga un único valor posible que tipe correctamente. Para indicar que el valor de un argumento fue deducido por chequeo de tipos y no observado por \textit{pattern matching},  se le agrega delante un punto (\AgdaSymbol{.}). Para mostrar un ejemplo de uso de un patrón con punto, se considerará el siguiente tipo de dato \AgdaDatatype{Square} definido como sigue:
-
 
 \ExecuteMetaData[latex/Agda.tex]{square}
 
@@ -64,7 +63,7 @@ dicho número es un cuadrado perfecto. Un habitante de tal tipo es una prueba de
 Se puede observar que al \textit{matchear} el argumento de tipo \AgdaDatatype{Square} \AgdaArgument{n} con el constructor \AgdaFunction{sq} aplicado a un natural \AgdaArgument{m}, \AgdaArgument{n} se ve forzado a ser igual a \AgdaArgument{m} \AgdaFunction{*} \AgdaArgument{m}.
 
 
-\subsection{Patrones absurdos}
+\subsection{Patrones absurdos}\label{tipos:absurdos}
 
 Otro tipo de patrón especial es el patrón absurdo. Usar un patrón absurdo al definir una función significa que no es necesario dar una definición para ese caso ya que no hay manera alguna en la que alguien pudiera dar un argumento para la función. El tipo de dato definido a continuación será de utilidad para ver un ejemplo de este tipo de patrones:
 
@@ -78,7 +77,7 @@ Si se quisiera definir una función que, dado un número y una prueba de que es 
 
 Se puede ver que en el caso del \AgdaNumber{1}, no existe una prueba de que ese número sea par, y por lo tanto no debemos dar una definición para ese caso. Requerir la pureba de paridad nos asegura que no hay riesgo de intentar dividir por dos un número impar. 
 
-\subsection{El constructor \texttt{with}}
+\subsection{El constructor \texttt{with}}\label{tipos:with}
 
 A veces no alcanza con hacer \textit{pattern matching} sobre los argumentos de una función, sino que se necesita analizar por casos el resultado de alguna computación intermedia. Para esto se utiliza el constructor \AgdaKeyword{with}. 
 
@@ -98,7 +97,7 @@ En este caso, el valor que tome \AgdaArgument{x} \AgdaFunction{<} \AgdaArgument{
 
 \ExecuteMetaData[latex/Agda.tex]{min2} 
 
-\section{Funciones dependientes}\label{dependent}
+\section{Funciones dependientes}\label{agda:dependent}
 
 Como se mencionó anteriormente, una de las principales características de Agda es que tiene tipos dependientes. El tipo dependiente más básico de todos son las funciones dependientes, en las cuales el tipo del resultado depende del valor del argumento. En Agda se escribe \AgdaSymbol{(}\AgdaArgument{x} \AgdaSymbol{:} \AgdaDatatype{A}\AgdaSymbol{)} \AgdaSymbol{$\rightarrow$} \AgdaDatatype{B} para indicar el tipo de una función que toma un argumento \AgdaArgument{x} de tipo \AgdaDatatype{A} y devuelve un resultado de tipo \AgdaDatatype{B}, donde \AgdaArgument{x} puede aparecer en \AgdaDatatype{B}. Un caso especial de esto es cuando \AgdaArgument{x} es un tipo en sí mismo. Se podría definir, por ejemplo:
 
@@ -110,7 +109,7 @@ A continuación se muestra un ejemplo de una función dependiente menos trivial,
 
 \ExecuteMetaData[latex/Agda.tex]{apply}
 
-\subsection{Argumentos Implícitos}
+\subsection{Argumentos Implícitos}\label{dependent:implicit}
 
 Los tipos dependientes sirven para definir funciones polimórficas. Pero en los ejemplos provistos en la sección anterior se da de forma explícita el tipo al cual cierta función polimórfica se debe aplicar. Usualmente esto es diferente. En general se espera que el tipo sobre el cual se va a aplicar una función polimórfica sea inferido por el \textit{type checker}. Para solucionar este problema, Agda utiliza un mecanismo de \textit{argumentos implícitos}. 
 
@@ -128,9 +127,9 @@ Si se desea, por el contrario, que el verificador de tipos infiera un término q
 
 \ExecuteMetaData[latex/Agda.tex]{one'}
 
-\section{Familias de Tipos de datos}
+\section{Familias de Tipos de datos}\label{agda:family}
 
-Se definió en el apartado \ref{parametrized} el tipo de las listas de tipo arbitrario parametrizado por \AgdaArgument{A}. Estas listas pueden tener cualquier largo, tanto una lista vacía como una lista con un millón de elementos son de tipo \AgdaDatatype{List} \AgdaArgument{A}. En ciertos casos es útil que el tipo restrinja el largo que tiene la lista, y es así como surgen las listas de largo definido, llamadas comúnmente vectores, que se definen como sigue:
+Se definió en el apartado \ref{tipos:parametrized} el tipo de las listas de tipo arbitrario parametrizado por \AgdaArgument{A}. Estas listas pueden tener cualquier largo, tanto una lista vacía como una lista con un millón de elementos son de tipo \AgdaDatatype{List} \AgdaArgument{A}. En ciertos casos es útil que el tipo restrinja el largo que tiene la lista, y es así como surgen las listas de largo definido, llamadas comúnmente vectores, que se definen como sigue:
 
 \ExecuteMetaData[latex/Agda.tex]{vec}
 
@@ -144,7 +143,7 @@ Lo que tienen de interesante las familias de tipos es lo que sucede cuando se us
 
 La definición es aceptada por el verificador de tipos ya que, aunque no se da un caso para la lista vacía, es exhaustiva. Esto es gracias a que un elemento del tipo \mbox{\AgdaDatatype{Vec} \AgdaArgument{A} \AgdaSymbol{(}\AgdaFunction{suc} \AgdaArgument{n}\AgdaSymbol{)}} sólo puede ser construído por el constructor \AgdaFunction{\_::\_}, y resulta útil ya que la función \AgdaFunction{head} no está correctamente definida para el caso de la lista vacía.  
 
-\section{Sistema de Módulos}
+\section{Sistema de Módulos}\label{agda:modules}
 
 El objetivo del sistema de módulos de Agda es manejar el espacio de nombres. Un programa se estructura en diversos archivos, cada uno de los cuales tiene un módulo \textit{top-level}, dentro del cual van todas las definiciones. El nombre del módulo principal de un archivo debe coincidir con el nombre de dicho archivo. Si se tiene, por ejemplo, un archivo llamado \texttt{Agda.agda}, al comienzo del archivo se debería encontrar la siguiente línea:
 
@@ -173,7 +172,7 @@ Al abrir un módulo, se puede controlar qué definiciones se muestran y cuáles 
 
 \ExecuteMetaData[latex/Agda.tex]{hidingrenaming}
 
-\subsection{Módulos Parametrizados}
+\subsection{Módulos Parametrizados}\label{modules:parametrized}
 
 Los módulos pueden ser parametrizados por cualquier tipo de dato. En caso de que se quiera definir un módulo para ordenar listas, por ejemplo, puede ser conveniente asumir que las listas son de tipo $A$ y que tenemos una relación de orden sobre $A$. A continuación se presenta dicho ejemplo: 
 
@@ -205,7 +204,7 @@ También se puede instanciar el módulo y abrir directamente el módulo resultan
 \ExecuteMetaData[latex/Agda.tex]{opensortnat}
 
 
-\subsection{Importando módulos desde otros archivos}
+\subsection{Importando módulos desde otros archivos}\label{modules:files}
 
 Se describió hasta ahora la forma de utilizar diferentes módulos dentro de un archivo, el cual tiene siempre un módulo principal. Muchas veces, sin embargo, los programas se dividen en diversos archivos y uno se ve en la necesidad de utilizar un módulo definido en un archivo diferente al actual. Cuando esto sucede, se debe \textit{importar} el módulo correspondiente.  
 
@@ -213,7 +212,7 @@ Los módulos se importan por nombre. Si se tiene un módulo \AgdaModule{A.B.C} e
 
 Al importar módulos se pueden utilizar las mismas palabras claves de control de espacio de nombres que al abrir un módulo (\AgdaKeyword{using}, \AgdaKeyword{hiding} y \AgdaKeyword{renaming}). Importar un módulo, sin embargo, no lo abre automáticamente. Se puede abrir de forma separada con una sentencia \AgdaKeyword{open} o usar la forma corta \AgdaKeyword{open import} \AgdaModule{A.B.C}.
 
-\section{Records}
+\section{Records}\label{agda:records}
 
 Un tipo \textit{record} se define de forma similar a un tipo \textit{data}, donde en lugar de constructores se tienen campos, los cuales son provistos por la palabra clave \AgdaKeyword{field}. Por ejemplo: 
 
@@ -241,12 +240,11 @@ Es posible agregar funciones al módulo de un \textit{record} incluyéndolas en 
 
 Como se puede ver en este ejemplo, los \textit{records} pueden ser, al igual que los \textit{datatype}, parametrizados. En este caso, el \textit{record} \AgdaRecord{Monad} está parametrizado por \AgdaArgument{M}. Cuando un \textit{record} está parametrizado, el módulo generado por él tiene los parámetros del \textit{record} como parámetros implícitos.
 
-\section{Características adicionales}
+\section{Características adicionales}\label{agda:additional}
 
 Agda tiene soporte para definiciones mutuamente recursivas. Estas deben ser declaradas dentro de un bloque \AgdaKeyword{mutual}:
 
 \ExecuteMetaData[latex/Agda.tex]{mutual}
 
-\section{Coinducción}
+\section{Coinducción}\label{agda:coinduction}
 
-\end{document}
