agrego ejemplos de monadas para ambas definiciones

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -82,7 +82,7 @@
 %\newcommand{\nombredelabiblio}{Bibliograf\'{i}a general}
 %\renewcommand\bibname{\nombredelabiblio}
 
-\bibliographystyle{bababbrv}
+\bibliographystyle{babalpha}
 \bibliography{bib/biblio}
 %\addcontentsline{toc}{section}{\nombredelabiblio}
 
